fix callout feedback gap & add variables (#2734)

--- a/packages/scss/src/components/calloutFeedbackList/component.scss
+++ b/packages/scss/src/components/calloutFeedbackList/component.scss
@@ -6,7 +6,9 @@
 
 	display: flex;
 	flex-direction: column;
-	gap: var(--pr-t-spacings-200);
+	font-size: var(--components-calloutFeedbackList-fontSize);
+	line-height: var(--components-calloutFeedbackList-lineHeight);
+	gap: var(--components-calloutFeedbackList-gap);
 
 	.button {
 		@include button.S;
